# POWER-OUTAGE-MONITOR

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  gitignore  power_monitor.py  pyproject.toml  setup.py
requirements/: base.txt  dev.txt  test.txt
scripts/: Usage Examples ps1.txt  Usage Examples sh.txt  build.ps1  build.sh  deploy.ps1  deploy.sh  dev-setup.ps1  test.ps1  test.sh
src/power_outage_monitor/: __init__.py  config.py  db.py  icsgen.py  main.py  monitor.py  scraper.py  utils.py
tests/: test_config.py  test_db.py  test_icsgen.py  test_main.py  test_monitor.py  test_scraper.py  test_utils.py
